--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <h3>Profile</h3><p>
+                <h3>Profile</h3>
+                <p>
                     Materials Specialist with a demonstrated history of working in the electrical and electronic manufacturing industry. Skilled in Materials Costing Calculation, Procurement, Purchasing, Sourcing, Demand Planning, Negotiation, Supply Chain Optimization.
-                    </p>
+                </p>
                 <br>
                 <h3>Employment History</h3>
-                <h6><strong>Materials Costing Specialist at Plexus Corp., Oradea, Bihor, Romania</strong></h6>    
-                <p><em>October 2015 – Present</em></p>
+                <h6>
+                    <strong>
+                        Materials Costing Specialist at Plexus Corp., Oradea, Bihor, Romania
+                    </strong>
+                </h6>    
+                <p>
+                    <em>October 2015 – Present</em></p>
                 <p> Materials Costing Specialist - EMEA Materials Costing Department - Plexus Romania</p>
                 <ul style="list-style-type: none;">
                     <li>Quote Management</li>
@@ -50,7 +56,7 @@
                 </ul>
                  
                 <h6><strong>MRO Buyer at Plexus Corp., Oradea, Bihor, Romania</strong></h6>    
-                <p><em>February 2014 – February 2015</em></p>
+                <p><em>February 2014 – October 2015</em></p>
                 <p> Materials, Repairs & Operations Buyer - Indirect Procurement - Materials Department - Plexus Romania. Non-BOM materials and services purchasing</p>
                 <ul style="list-style-type: none;">
                     <li>Materials Management - Consumables (Packaging, Chemicals, Small Tools)</li>
